# AOC24

./: .gitignore  CMakeLists.txt  CMakePresets.json
inputs/: day4.txt
src/: CMakeLists.txt
src/day1/: CMakeLists.txt  day1.m.cpp
src/day10/: CMakeLists.txt  day10.m.cpp  day10_input.hpp  day10_types.hpp
src/day11/: CMakeLists.txt  day11.m.cpp
src/day2/: CMakeLists.txt  d2.m.cpp
src/day3/: CMakeLists.txt  d3.m.cpp
src/day4/: CMakeLists.txt  day4.hpp  day4.m.cpp  day42.hpp  day4_test.g.cpp
src/day5/: CMakeLists.txt  day5.m.cpp  day5_1.hpp  day5_2.hpp  day5_input.hpp  day5_tests.g.cpp
src/day6/: CMakeLists.txt  day6.m.cpp  day6_1.hpp  day6_2.hpp  day6_input.hpp  day6_test.g.cpp
src/day7/: CMakeLists.txt  day7.m.cpp  day7_equation.hpp  day7_input.hpp
src/day8/: CMakeLists.txt  day8.m.cpp  day8_input.hpp
src/day9/: CMakeLists.txt  day9.m.cpp
